# EyesightBreak

./: .gitignore  CREDITS.md  README.md  eyesightbreak.py  pyproject.toml
.github/workflows/: all_tests.yaml
eyesightbreak-env/: pyvenv.cfg
src/: eyesight_break.py
src/eyesight_break/: config.py  gui.py  main.py  notifications.py  timer.py
tests/: test_config.py  test_gui.py  test_notifications.py  test_timer.py
